fix(plugins/plugin-client-common): guidebooks render poorly in big windows with large fonts
we are using a fixed 960px in a few places.
also, dangit, but the wizard nav gets too narrow in these cases.

--- a/plugins/plugin-client-common/web/scss/components/Terminal/Commentary.scss
+++ b/plugins/plugin-client-common/web/scss/components/Terminal/Commentary.scss
@@ -167,7 +167,7 @@ body[kui-theme-style] {
   flex: 1;
   display: flex;
   justify-content: flex-start;
-  max-width: 960px;
+  max-width: $max-column-width;
 
   /* This helps with monaco-editor reactive width, e.g. when adding or removing splits */
   min-width: 0;
